--- a/backend/package.json
+++ b/backend/package.json
@@ -12,6 +12,7 @@
     "moment-timezone": "^0.6.0",
     "multer": "^1.4.5-lts.2",
     "mysql2": "^3.14.0",
+    "node-cron": "^4.2.1",
     "papaparse": "^5.5.2",
     "uuid": "^11.1.0",
     "ws": "^8.18.3"
