--- a/backend/.env
+++ b/backend/.env
@@ -2,8 +2,8 @@
 
 
 # Server Configuration
-PORT=5000
-NODE_ENV=development
+PORT=6292
+NODE_ENV=production
 
 # Database Configuration
 DB_HOST=localhost
@@ -13,7 +13,7 @@ DB_NAME=whatsapp_templates
 
 # JWT Authentication
 JWT_SECRET=jwt_secret_key
-JWT_EXPIRE=2m
+JWT_EXPIRE=24h
 
 # WhatsApp API Configuration
 WHATSAPP_API_URL=https://graph.facebook.com/v17.0
@@ -25,7 +25,5 @@ WHATSAPP_API_URL=https://graph.facebook.com/v17.0
 WHATSAPP_WEBHOOK_ENDPOINT=/api/messages/webhook
 
 
-BASE_URL=http://localhost:5000/api
+BASE_URL=http://localhost:6292/api
 NGROK_URL=https://5444d881cbb9.ngrok-free.app/api
-
-NODE_ENV=development
