--- a/backend/.env
+++ b/backend/.env
@@ -2,8 +2,8 @@
 
 
 # Server Configuration
-PORT=6292
-NODE_ENV=production
+PORT=5000
+NODE_ENV=development
 
 # Database Configuration
 DB_HOST=localhost
@@ -25,5 +25,5 @@ WHATSAPP_API_URL=https://graph.facebook.com/v17.0
 WHATSAPP_WEBHOOK_ENDPOINT=/api/messages/webhook
 
 
-BASE_URL=http://localhost:6292/api
+BASE_URL=http://localhost:5000/api
 NGROK_URL=https://5444d881cbb9.ngrok-free.app/api
